[package]
authors = ["Bence Kalmar <bkalmar1996@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Flattening iterator adaptor for token streams"
edition = "2018"
keywords = ["flatten", "macros", "token"]
license = "MIT"
name = "token_stream_flatten"
repository = "https://github.com/brkalmar/token_stream_flatten-rs"
version = "0.1.0"

[dependencies]
proc-macro2 = "1.0"

[features]
default = ["proc-macro", "span-locations"]

proc-macro = ["proc-macro2/proc-macro"]
span-locations = ["proc-macro2/span-locations"]
